# mini-builder-rs

./: .gitignore  Cargo.toml  README.md
examples/: example_01_locals.rs  example_02_locals.rs  example_site.rs
examples/example_site/: variables
examples/example_site/sources/: index.html
examples/example_site/sources/pages/: files_page.html
examples/example_site/templates/: head.html  navigation_menu.html
examples/example_site/templates/files/: file_card.html  files_section.html
src/: lib.rs  value.rs
src/builder/: builder_error.rs  mod.rs  partial.rs  targets.rs
src/evaluator/: block.rs  contained_evaluator.rs  dependencies.rs  evaluation_context.rs  evaluator.rs  evaluator_builder_error.rs  mod.rs
src/parser/: expression.rs  mod.rs  node.rs  parser_error.rs
src/tokenizer/: mod.rs  token.rs  tokenizer_error.rs
